--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 
 
-.body {
-  background-color: rgb(68, 17, 116);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  height: 100%;
-  color: white;
 }
 
-.card-item {
-  align-items: center;
+.body{
+  background-color: rgb(49, 12, 87);
 }
