--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,50 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
 
+.body {
+width: 100vw;
+background-color:rgb(44, 7, 7);
+display:flex;
+position:relative; 
 
 }
 
-.body{
-  background-color: rgb(49, 12, 87);
+.empresa {
+
+  display: flex;
+  justify-content:space-between;
+  width: 100vw;
+  height: 200px;
+  padding: 10px 20%;
+  color: white;
+
+}
+
+button {
+  color: white;
+  border-radius: 5px;
+  height: 48px;
+  width: 192px;
+  background-color: rgb(61, 20, 20);
+  border: 0;
+  cursor: pointer;
+}
+
+/* quando o mouse está em cima de algum elemento */
+.button:houver{
+  opacity: 0.8;
+  /* quando o mouse volta clicado */
+}
+.button:acite{
+  opacity: 1;
+}
+
+.cards {
+  widht: 100%;
+  height: 100px;
+  position: absolute; 
+  /* esse comando é para flutuar */
+  top: 150px;
 }
