--- a/src/App.css
+++ b/src/App.css
@@ -5,22 +5,23 @@
 }
 
 .body {
-width: 100vw;
-background-color:rgb(44, 7, 7);
-display:flex;
-position:relative; 
-
+  width: 100vw;
+  background-color: rgb(44, 7, 7);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
 .empresa {
-
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   width: 100vw;
   height: 200px;
   padding: 10px 20%;
   color: white;
-
+  position: relative;
+  z-index: 1;
 }
 
 button {
@@ -33,19 +34,39 @@ button {
   cursor: pointer;
 }
 
-/* quando o mouse está em cima de algum elemento */
-.button:houver{
+button:hover {
   opacity: 0.8;
-  /* quando o mouse volta clicado */
 }
-.button:acite{
+
+button:active {
   opacity: 1;
 }
 
 .cards {
-  widht: 100%;
-  height: 100px;
-  position: absolute; 
-  /* esse comando é para flutuar */
-  top: 150px;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: 150px; 
+  z-index: 2;
+}
+
+.card {
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  width: 25%; 
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 0 10px; 
+}
+
+.card h2 {
+  margin-bottom: 10px;
+  color: rgb(44, 7, 7);
+}
+
+.card p {
+  font-size: 24px;
+  color: rgb(44, 7, 7);
 }
