--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  
 }
 
 .empresa {
@@ -22,7 +23,6 @@
   position: relative;
   z-index: 1;
   background-color: rgb(44, 7, 7);
-
 }
 
 button {
@@ -53,6 +53,9 @@ button:active {
   padding: 15px;
   text-align: center;
   margin: 0 10px; 
+  justify-content: space-between;
+  gap: 20px;
+  
 }
 
 .card{
@@ -64,6 +67,8 @@ button:active {
   padding: 20px;
   display: flex;
   align-items: center;
+  margin: 10px;
+  
 
 }
 
@@ -75,7 +80,6 @@ button:active {
   display: flex;
   align-items: center;
   justify-content:space-around;
-
 }
 
 .transacoes{
@@ -98,7 +102,6 @@ color:rgb(73, 47, 47)
 
 }
 
-
-.card2 {
-  margin-top: 180px;
+.gastos {
+  margin-top: 15%;
 }
