--- a/src/components/cards/styles.css
+++ b/src/components/cards/styles.css
@@ -1,19 +1,4 @@
-.cards {
-    width: 60%;
-    display: flex;
-    position: absolute;
-    top: 150px; 
-    z-index: 2;
-    background-color: rgb(139, 66, 66);
-    padding: 15px;
-    text-align: center;
-    margin: 0 10px; 
-    justify-content: space-between;
-    gap: 20px;
-    
-  }
-
-  .card{
+ .card{
 
     width: 300px;
     height: 150px;
@@ -27,9 +12,27 @@
   
   }
   
-
-  .historico{
-    width: 70px;
-
+  .container-card-icon {
+    width: 90px;
+    height: 100px;
+    background-color: rgb(236, 163, 163);
+    border-radius: 45%; 
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
   }
+
   
+  .cardBaixo{
+
+    width: 600px;
+    height: 150px;
+    background-color: rgb(221, 141, 141);
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    
+  
+  }
