--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,10 @@ button:active {
 .valorBaixo{
   color:rgb(19, 3, 3);
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .cards {
+    width: 100%;
+  }
+}
