--- a/src/components/cards/styles.css
+++ b/src/components/cards/styles.css
@@ -78,3 +78,10 @@
 .red {
   color: red;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .card {
+    flex: 1;
+  }
+}
