--- a/src/components/botao/styles.css
+++ b/src/components/botao/styles.css
@@ -1,5 +1,5 @@
 .botao-cadastro{
-    width: 255px;
+    width: 100%;
     height: 64px;
     border-radius: 4px;
     border:solid 1px #D7D7D7;
@@ -13,3 +13,11 @@
     gap: 15px;
 
 }
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .botao-cadastro{
+        width: 100px;
+    }
+      
+    }
