--- a/src/components/cards/styles.css
+++ b/src/components/cards/styles.css
@@ -1,22 +1,24 @@
  .card{
-
-    width: 300px;
+    width: calc((100% - 40px) /3);
     height: 150px;
     background-color: rgb(221, 141, 141);
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     align-items: center;
-    margin: 10px;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    overflow: hidden;
     
   
   }
   
   .container-card-icon {
-    width: 90px;
-    height: 100px;
+    width: 40px;
+    height: 40px;
     background-color: rgb(236, 163, 163);
-    border-radius: 45%; 
+    border-radius: 100%; 
     display: flex;
     align-items: center;
     justify-content:space-around;
@@ -25,20 +27,19 @@
   
   .cardBaixo{
 
-    width: 600px;
+    width: 100%;
     height: 150px;
     background-color: rgb(221, 141, 141);
     border-radius: 10px;
     padding: 20px;
     display: flex;
     align-items: center;
-    margin: 10px;
+    /* margin: 10px; */
     
   
   }
 
   .texto {
-    text-align: justify;
     color:rgb(46, 28, 28);
     
     }
@@ -71,18 +72,32 @@
 .valor {
   color:rgb(19, 3, 3);
   font-weight:bold;
-  font-size: 25px;
-  text-align: justify;
+  font-size: 20px;
   
 }
 .red {
   color: red;
 }
 
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
   .card {
     flex: 1;
-    width: 100%;
+    flex-direction: row;
+    padding: 10px;
+   justify-content: flex-start;
+
+  }
+
+  .container-card-icon {
+    width: 90px;
+    height: 90px;
+  }
+  .texto, .valor{
+    text-align: left;
+  }
+  .valor{
+    font-size: 25px;
+
   }
 }
