--- a/src/components/cards/styles.css
+++ b/src/components/cards/styles.css
@@ -22,6 +22,8 @@
     display: flex;
     align-items: center;
     justify-content:space-around;
+      gap: 10px;
+
   }
 
   
@@ -34,6 +36,8 @@
     padding: 20px;
     display: flex;
     align-items: center;
+    gap: 10px;
+
     /* margin: 10px; */
     
   
